--- a/.github/workflows/main_newappslot.yml
+++ b/.github/workflows/main_newappslot.yml
@@ -33,17 +33,17 @@ jobs:
           python -m venv venv
           source venv/bin/activate
 
-      - name: Cache dependencies 
-        uses: actions/cache@v2
-        id: cache
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore_keys: |
-            ${{ runner.os }}-pip-
+      #- name: Cache dependencies 
+       # uses: actions/cache@v2
+        #id: cache
+        #with:
+         # path: ~/.cache/pip
+         # key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        #  restore_keys: |
+        #    ${{ runner.os }}-pip-
 
       - name: install dependencies if cache was not found 
-        if: steps.cache.outputs.cache-hit != 'true'       
+       #if: steps.cache.outputs.cache-hit != 'true'       
         run: pip install -r requirements.txt
         
       - name: test build
