--- a/.github/workflows/main_newappslot.yml
+++ b/.github/workflows/main_newappslot.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
 name: Build and deploy Python app to Azure Web App - newAppSlot
 
@@ -13,7 +10,7 @@ on:
 env:
   RESOURCE_GROUP: replace-with-your-rg-name
   WEBAPP_NAME: newAppSlot
-  SLOT_NAME: newappslot # Create a slot on your web app called "staging"
+  SLOT_NAME_B: newappslot # Create a slot on your web app called "staging"
   DOTNET_VERSION: "6.0.x"
 
 jobs:
