--- a/.github/workflows/main_newappslot.yml
+++ b/.github/workflows/main_newappslot.yml
@@ -43,8 +43,7 @@ jobs:
        #if: steps.cache.outputs.cache-hit != 'true'       
         run: pip install -r requirements.txt
         
-     # - name: test build
-      #  run: python manage.py runserver
+
         
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
@@ -54,13 +53,9 @@ jobs:
             . 
             !venv/
 
-  deploy-to-stage:
+  deploy-to-stage-initial-slot:
     runs-on: ubuntu-latest
     needs: build
-    environment:
-      name: stage
-      url: "https://${{ env.WEBAPP_NAME }}.azurewebsites.net/"
-
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
@@ -75,14 +70,29 @@ jobs:
           app-name: ${{ env.WEBAPP_NAME }}
           #slot-name: ${{ env.SLOT_NAME_B }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+          
+  swap-stage-slot:
+    name: Release to stage
+    needs: deploy-to-stage-initial-slot
+    runs-on: ubuntu-latest
+    environment:
+      name: stage
+      url: "https://${{ env.WEBAPP_NAME }}.azurewebsites.net/"
+    steps:
+      - name: Log into Azure CLI with service principal
+        uses: azure/login@v1.1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Swap slots
         id: main-swap
-        run: az webapp deployment slot swap -s  ${{ env.SLOT_NAME_B }} -n ${{ env.WEBAPP_NAME }} -g ${{ env.RESOURCE_GROUP }} --target-slot ${{ env.SLOT_NAME_A }}
+        run: az webapp deployment slot swap -s ${{ env.SLOT_NAME_B }} -n ${{ env.WEBAPP_NAME }} -g ${{ env.RESOURCE_GROUP }} --target-slot ${{ env.SLOT_NAME_A }}
 
-  release-to-prod-first:
+
+
+  deploy-to-prod-initial-slot:
     runs-on: ubuntu-latest
-    needs: deploy-to-stage
+    needs: deploy-to-stage-initial-slot
     environment:
       name: "production"
       url: "https://${{ env.WEBAPP_NAME }}.azurewebsites.net/"
@@ -102,19 +112,38 @@ jobs:
           slot-name: ${{ env.SLOT_NAME_B }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
 
+  test-and-deploy-to-prod-slot:
+      name: Testing prod artifact
+      needs: deploy-to-prod-initial-slot
+      runs-on: ubuntu-latest
+      environment:
+        name: "Production"
+        url: "https://${{ env.WEBAPP_NAME }}.azurewebsites.net/"
+      steps:
+        - name: Log into Azure CLI with service principal
+          uses: azure/login@v1.1
+          with:
+            creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-  release-to-prod-last:
-    name: Release to prod
-    needs:  release-to-prod-first
-    runs-on: ubuntu-latest
-    environment:
-      name: "Production"
-    steps:
-      - name: Log into Azure CLI with service principal
-        uses: azure/login@v1.1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+        - name: Traffic test slots
+          id: trafic-test
+          run: az webapp traffic-routing set --distribution ${{ env.SLOT_NAME_B }}=30 --name ${{ env.WEBAPP_NAME } -g training-rg
 
-      - name: Swap slots
-        id: main-swap
-        run: az webapp deployment slot swap -s ${{ env.SLOT_NAME_B }} -n ${{ env.WEBAPP_NAME }} -g ${{ env.RESOURCE_GROUP }} --target-slot ${{ env.SLOT_NAME_A }}
+        - name: ITSM Integration
+          env:
+            ITSM_API_TOKEN: ${{ secrets.ITSM_API_TOKEN }}
+          run: |
+            # Your custom integration script
+            # Example: create a ticket or update a ticket in the ITSM system
+           # echo "Creating ticket in ITSM system"
+           # curl -X POST -H "Authorization: Bearer $ITSM_API_TOKEN" -d '{"title": "Pipeline Deployment", "status": "In Progress"}' https://itsm-api.example.com/tickets
+
+        - name: Approve Deployment
+          id: approval
+          uses: repo/approval-action@v1
+          with:
+            message: "Test sucessful with no erro or incident ticket raised"
+          
+        - name: Swap slots
+          id: main-swap
+          run: az webapp deployment slot swap -s ${{ env.SLOT_NAME_B }} -n ${{ env.WEBAPP_NAME }} -g ${{ env.RESOURCE_GROUP }} --target-slot ${{ env.SLOT_NAME_A }}
