--- a/.github/workflows/pythonPipeline.yml
+++ b/.github/workflows/pythonPipeline.yml
@@ -69,7 +69,7 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: ${{ env.WEBAPP_NAME }}
-          #slot-name: ${{ env.SLOT_NAME_B }}
+          slot-name: ${{ env.SLOT_NAME_B }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
 
   swap-stage-slot:
