--- a/.github/workflows/pythonPipeline.yml
+++ b/.github/workflows/pythonPipeline.yml
@@ -52,7 +52,7 @@ jobs:
     needs: build
     environment:
       name: stage
-      url: "https://${{ env.SLOT_NAME_B }}.azurewebsites.net/"
+      url: "https://${{ vars.SLOT_NAME_B }}.azurewebsites.net/"
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
@@ -64,8 +64,8 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: ${{ env.WEBAPP_NAME }}
-          slot-name: ${{ env.SLOT_NAME_B }}
+          app-name: ${{ vars.WEBAPP_NAME }}
+          slot-name: ${{ vars.SLOT_NAME_B }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
 
   swap-stage-slot:
@@ -73,7 +73,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: stage
-      url: "https://${{ env.WEBAPP_NAME }}.azurewebsites.net/"
+      url: "https://${{ vars.WEBAPP_NAME }}.azurewebsites.net/"
     steps:
       - name: Log into Azure CLI with service principal
         uses: azure/login@v1.1
@@ -82,14 +82,14 @@ jobs:
 
       - name: Swap slots
         id: main-swap
-        run: az webapp deployment slot swap --resource-group ${{ env.RESOURCE_GROUP }} --name ${{ env.WEBAPP_NAME }} --slot ${{ env.SLOT_NAME_B }} --target-slot ${{ env.SLOT_NAME_A }}
+        run: az webapp deployment slot swap --resource-group ${{ vars.RESOURCE_GROUP }} --name ${{ vars.WEBAPP_NAME }} --slot ${{ vars.SLOT_NAME_B }} --target-slot ${{ env.SLOT_NAME_A }}
   
   deploy-to-prod-initial-slot:
     runs-on: ubuntu-latest
     needs: swap-stage-slot
     environment:
       name: "production"
-      url: "https://${{ env.WEBAPP_NAME }}.azurewebsites.net/"
+      url: "https://${{ vars.WEBAPP_NAME }}.azurewebsites.net/"
 
     steps:
       - name: Download artifact from build job
@@ -102,8 +102,8 @@ jobs:
         uses: azure/webapps-deploy@v2
         id: deploy-to-webapp
         with:
-          app-name: ${{ env.WEBAPP_NAME }}
-          slot-name: ${{ env.SLOT_NAME_B }}
+          app-name: ${{ vars.WEBAPP_NAME }}
+          slot-name: ${{ vars.SLOT_NAME_B }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
 
   test-and-deploy-to-prod-slot:
