--- a/.github/workflows/pythonPipeline.yml
+++ b/.github/workflows/pythonPipeline.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Python version
         uses: actions/setup-python@v1
@@ -40,7 +40,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: python-app
           path: |
@@ -52,10 +52,10 @@ jobs:
     needs: build
     environment:
       name: stage
-      url: "https://${{ vars.SLOT_NAME_B }}.azurewebsites.net/"
+      url: "https://${{ vars.WEBAPP_NAME }}-${{ vars.SLOT_NAME_B }}.azurewebsites.net/"
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: python-app
           path: .
@@ -93,7 +93,7 @@ jobs:
 
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: python-app
           path: .
@@ -111,7 +111,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: "Production"
-      url: "https://${{ vars.WEBAPP_NAME }}.azurewebsites.net/"
+      url: "https://${{ vars.WEBAPP_NAME }}-${{ vars.SLOT_NAME_B }}.azurewebsites.net/"
     steps:
       - name: Log into Azure CLI with service principal
         uses: azure/login@v1.1
