--- a/.github/workflows/rollback_pipeline.yml
+++ b/.github/workflows/rollback_pipeline.yml
@@ -1,9 +1,6 @@
-name: Build and deploy Python app to Azure Web App
+name: Brollback plan
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
 
 
