--- a/.github/workflows/build_infra_pipeline.yml
+++ b/.github/workflows/build_infra_pipeline.yml
@@ -20,4 +20,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: infra-artifact
-          path: /home/runner/work/demo-app/demo.infra
+          path: ./demo.infra
