--- a/.github/workflows/pulumi_pipline.yml
+++ b/.github/workflows/pulumi_pipline.yml
@@ -8,7 +8,26 @@ on:
     - demo.infra
   workflow_dispatch:
 
+
+
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+
+      - uses: actions/checkout@v3
+        with:
+          clean: false
+          
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+      
+      - name: Archive infrastructure artifacts for pulumi up
+        uses: actions/upload-artifact@v2
+        with:
+          name: infra-artifact
+          path: ./demo.infra
   deploy-stage:
     if: ${{ github.ref == 'refs/heads/main' }}
     uses: ./.github/workflows/deploy_template.yml
