--- a/.github/workflows/javascript_pipeline.yml
+++ b/.github/workflows/javascript_pipeline.yml
@@ -16,17 +16,20 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: code-artifact
+          path: .
+
       - name: Set up Node.js
         uses: actions/setup-python@v4
         with:
-          node-version: 14
+          node-version: 18.x
 
       - name: Install Dependencies
-        run: yarn install
+        run: yarn install && yarn build
 
-      - name: Build application
-        run: yarn build
-      
       - name: Archive artifacts
         uses: action/upload-artifact@v3
         with:
