--- a/.github/workflows/javascript_pipeline.yml
+++ b/.github/workflows/javascript_pipeline.yml
@@ -6,9 +6,6 @@ on:
       - main
   workflow_dispatch:
 
-env:
-  DOTNET_VERSION: "6.0.x"
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,9 +20,9 @@ jobs:
           path: .
 
       - name: Set up Node.js
-        uses: actions/setup-python@v4
+        uses: actions/setup-node@v2
         with:
-          node-version: 18.x
+          node-version: 16
 
       - name: Install Dependencies
         run: yarn install && yarn build
