--- a/.github/workflows/javascript_pipeline.yml
+++ b/.github/workflows/javascript_pipeline.yml
@@ -28,7 +28,7 @@ jobs:
         run: yarn install && yarn build
 
       - name: Archive artifacts
-        uses: action/upload-artifact@v3
+        uses: actions/upload-artifact@v3
         with:
           name: demo-app
           path: build/
