--- a/.github/workflows/javascript_pipeline.yml
+++ b/.github/workflows/javascript_pipeline.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
   workflow_dispatch:
+  workflow_run:
+    workflows: ["Build"]
+    types:
+      - completed
 
 jobs:
   build:
