--- a/.github/workflows/javascript_pipeline.yml
+++ b/.github/workflows/javascript_pipeline.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: python-app
+          name: demo-app
           path: .
 
       - name: Deploy to Azure Web App
