--- a/.github/workflows/deploy_template.yml
+++ b/.github/workflows/deploy_template.yml
@@ -3,9 +3,9 @@ name: Deploy template
 on:
   workflow_call:
     inputs:
-      #ENVIRONMENT_NAME:
-      #  required: true
-      #  type: string
+      ENVIRONMENT_NAME:
+        required: true
+        type: string
       RUNNER:
         required: true
         type: string
@@ -26,7 +26,7 @@ on:
 jobs:
   deployment:
     runs-on: ${{ inputs.RUNNER }}
-    #environment: ${{ inputs.ENVIRONMENT_NAME }}
+    environment: ${{ inputs.ENVIRONMENT_NAME }}
 
     steps:
       - name: Download infrastructure artifacts
