--- a/.github/workflows/pulumi_pipline.yml
+++ b/.github/workflows/pulumi_pipline.yml
@@ -35,7 +35,7 @@ jobs:
     uses: ./.github/workflows/deploy_template.yml
     with:
       RUNNER: "ubuntu-latest"
-      #ENVIRONMENT_NAME: stage
+      ENVIRONMENT_NAME: stage
     secrets:
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
@@ -49,7 +49,7 @@ jobs:
     needs: deploy-stage
     with:
       RUNNER: "ubuntu-latest"
-      #ENVIRONMENT_NAME: production
+      ENVIRONMENT_NAME: production
     secrets:
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
