--- a/.github/workflows/pulumi_pipline.yml
+++ b/.github/workflows/pulumi_pipline.yml
@@ -14,47 +14,70 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Login to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Install Pulumi
+        run: |
+          curl -fsSL https://get.pulumi.com | sh
+          export PATH=$PATH:/root/.pulumi/bin
+      - name: Install dependencies
+        run: |
+          cd demo.infra/
+          npm install
+      - name: Preview changes
+        run: |
+          cd demo.infra/
+          pulumi preview --non-interactive --emoji --color always
+      - name: Deploy changes
+        run: |
+          cd demo.infra/
+          pulumi up --non-interactive --emoji --color always --yes
+#     runs-on: ubuntu-latest
+#     steps:
 
-      - uses: actions/checkout@v3
-        with:
-          clean: false
+#       - uses: actions/checkout@v3
+#         with:
+#           clean: false
           
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16.x
+#       - uses: actions/setup-node@v3
+#         with:
+#           node-version: 16.x
       
-      - name: Archive infrastructure artifacts for pulumi up
-        uses: actions/upload-artifact@v2
-        with:
-          name: infra-artifact
-          path: ./demo.infra
+#       - name: Archive infrastructure artifacts for pulumi up
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: infra-artifact
+#           path: ./demo.infra
           
-  deploy-stage:
-    if: ${{ github.ref == 'refs/heads/main' }}
-    needs: build
-    uses: ./.github/workflows/deploy_template.yml
-    with:
-      RUNNER: "ubuntu-latest"
-      ENVIRONMENT_NAME: stage
-    secrets:
-      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+#   deploy-stage:
+#     if: ${{ github.ref == 'refs/heads/main' }}
+#     needs: build
+#     uses: ./.github/workflows/deploy_template.yml
+#     with:
+#       RUNNER: "ubuntu-latest"
+#       ENVIRONMENT_NAME: stage
+#     secrets:
+#       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+#       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+#       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+#       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+#       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+#       PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
-  deploy-live:
-    uses: ./.github/workflows/deploy_template.yml
-    needs: deploy-stage
-    with:
-      RUNNER: "ubuntu-latest"
-      ENVIRONMENT_NAME: production
-    secrets:
-      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-      ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-      ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-      ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-      ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-      PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+#   deploy-live:
+#     uses: ./.github/workflows/deploy_template.yml
+#     needs: deploy-stage
+#     with:
+#       RUNNER: "ubuntu-latest"
+#       ENVIRONMENT_NAME: production
+#     secrets:
+#       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+#       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+#       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+#       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+#       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+#       PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
