--- a/.github/workflows/pulumi_pipline.yml
+++ b/.github/workflows/pulumi_pipline.yml
@@ -13,6 +13,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment:
+      name: stage
     steps:
       - uses: actions/checkout@v2
       - name: Login to Azure
