--- a/.github/workflows/pulumi_pipline.yml
+++ b/.github/workflows/pulumi_pipline.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: stage
+    env:
+      PULUMI: ${{ secrets.PULUMI_ACCESS_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - name: Login to Azure
@@ -25,6 +27,8 @@ jobs:
         run: |
           curl -fsSL https://get.pulumi.com | sh
           export PATH=$PATH:/root/.pulumi/bin
+          export PULUMI_ACCESS_TOKEN=$PULUMI
+
       - name: Install dependencies
         run: |
           cd demo.infra/
