--- a/.github/workflows/pulumi_pipline.yml
+++ b/.github/workflows/pulumi_pipline.yml
@@ -35,9 +35,9 @@ jobs:
           npm install
       - name: Preview changes
         run: |
-          ls -R .
+
           cd demo.infra/
-          pulumi preview --non-interactive -s dev --emoji --color always
+          pulumi preview --non-interactive -s dev --emoji --color always --debug
       - name: Deploy changes
         run: |
           cd demo.infra/
