--- a/.github/workflows/pulumi_pipline.yml
+++ b/.github/workflows/pulumi_pipline.yml
@@ -1,81 +1,92 @@
-name: Deploy pulumi
+import * as pulumi from "@pulumi/pulumi";
+import * as azure from "@pulumi/azure-native";
 
-on:
-  push:
-    branches:
-      - main
-    paths:
-    - demo.infra
-  workflow_dispatch:
+// resource group
+const resourceGroup = new azure.resources.ResourceGroup("resourceGroup", {
+    location: "eastus2", 
+})
+
+// app service plan
+const appServicePlan = new azure.web.AppServicePlan("appServicePlan", {
+    kind: "Linux",
+    resourceGroupName: resourceGroup.name,
+    location: resourceGroup.location,
+    sku: {
+        name: "S1",
+        tier: "Standard",
+    },
+},
+    {
+        dependsOn: resourceGroup
+    }
+);
 
 
+// app service plan
+const appServicePlanStaging = new azure.web.AppServicePlan("appServicePlanStaging", {
+    kind: "Linux",
+    resourceGroupName: resourceGroup.name,
+    location: resourceGroup.location,
+    sku: {
+        name: "S1",
+        tier: "Standard",
+    },
+},
+    {
+        dependsOn: resourceGroup
+    }
+);
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    environment:
-      name: stage
-    env:
-      PULUMI: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-      - name: Install Pulumi
-        run: |
-          curl -fsSL https://get.pulumi.com | sh
-          export PATH=$PATH:/root/.pulumi/bin
-          cd demo.infra/
-          npm install
-          export PULUMI_ACCESS_TOKEN=$PULUMI
-          pulumi preview --non-interactive -s dev --emoji --color always --debug
-          pulumi up --non-interactive -s dev --emoji --color always --yes
- 
-#     runs-on: ubuntu-latest
-#     steps:
+// webApp for the production 
+const webAppProduction = new azure.web.WebApp("webAppProduction", {
+    resourceGroupName: resourceGroup.name,
+    location: resourceGroup.location,
+    serverFarmId: appServicePlan.id,
+    siteConfig: {
+        alwaysOn: true
+    }
+},
+    {
+        dependsOn: appServicePlan
+    }
+);
 
-#       - uses: actions/checkout@v3
-#         with:
-#           clean: false
-          
-#       - uses: actions/setup-node@v3
-#         with:
-#           node-version: 16.x
-      
-#       - name: Archive infrastructure artifacts for pulumi up
-#         uses: actions/upload-artifact@v2
-#         with:
-#           name: infra-artifact
-#           path: ./demo.infra
-          
-#   deploy-stage:
-#     if: ${{ github.ref == 'refs/heads/main' }}
-#     needs: build
-#     uses: ./.github/workflows/deploy_template.yml
-#     with:
-#       RUNNER: "ubuntu-latest"
-#       ENVIRONMENT_NAME: stage
-#     secrets:
-#       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-#       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-#       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-#       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-#       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-#       PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+// webApp for staging
+const webAppStaging = new azure.web.WebApp("webAppStaging", {
+    resourceGroupName: resourceGroup.name,
+    location: resourceGroup.location,
+    serverFarmId: appServicePlanStaging.id,
+    siteConfig: {
+        alwaysOn: true
+    }
+},
+    {
+        dependsOn: appServicePlanStaging
+    }
+);
 
-#   deploy-live:
-#     uses: ./.github/workflows/deploy_template.yml
-#     needs: deploy-stage
-#     with:
-#       RUNNER: "ubuntu-latest"
-#       ENVIRONMENT_NAME: production
-#     secrets:
-#       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
-#       ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-#       ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-#       ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-#       ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-#       PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
 
+// initial prod slot
+const productionSlot = new azure.web.WebAppSlot("productionSlot", {
+    name: webAppProduction.name,
+    serverFarmId: appServicePlan.id,
+    location: resourceGroup.location,
+    resourceGroupName: resourceGroup.name,
+},
+    {
+        dependsOn: webAppProduction
+    }
+);
+
+
+// initial staging slot
+const stagingSlot = new azure.web.WebAppSlot("stagingSlot", {
+    name: webAppStaging.name,
+    location: resourceGroup.location,
+    serverFarmId: appServicePlanStaging.id,
+    resourceGroupName: resourceGroup.name,
+},
+    {
+        dependsOn: webAppStaging
+    }
+);
